...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#171717"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/usernameTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="102dp"
        android:text="@string/my_tasks"
        android:textColor="#FFFFFF"
...
        android:padding="10dp"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTaskTitle" />

    <ImageButton
        android:id="@+id/settingB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
...
